blocks/footer/footer.css
footer {
  background-color: var(--light-color);
  font-size: var(--body-font-size-xs);
}

footer .footer > div {
  margin: auto;
  max-width: 1200px;
  padding: 40px 24px 24px;
}

footer .footer p {
  margin: 0;
}

@media (width >= 900px) {
  footer .footer > div {
    padding: 40px 32px 24px;
  }
}
footer .columns img{
  width: auto !important;
}

footer .embed{
  margin: 0 !important;
}

footer .embed > div{
  left: 76% !important;
  padding-bottom: 20% !important;
  bottom: 35px;
}
footer h2:nth-of-type(2){
  margin-top: 0;
}

